# microkit-old

./: .gitignore  .gitmodules  bld.sh  board-zynqmp-zcu102.dtb  build_ben.sh  build_kbd_ben.sh  build_script.sh  build_sdk.py  dev_build.py  init-build.sh
example/maaxboard/display_driver/: Makefile  display_driver.system
example/maaxboard/display_driver/cap/: xhci_stub.c
example/maaxboard/display_driver/include/display/: imx8m_dcss.h
example/maaxboard/echo_server/: Makefile  eth.system
example/maaxboard/hello/: CMakeLists.txt  build_script.sh  hello.c  hello.system  hello2.c
example/maaxboard/hello/libmicrokit/: CMakeLists.txt
example/maaxboard/hello/libmicrokit/include/: printf.h  stdlib.h
example/maaxboard/hello/libmicrokit/include/dma/: dma.h
example/maaxboard/hello/libmicrokit/include/public_api/: stdio.h  stdio_microkit.h  stdlib.h
example/maaxboard/hello/libmicrokit/src/: dma.c  public_api.c  tinyalloc.c  util.c
example/maaxboard/hello/libmicrokitutils/include/dma/: dma.h
example/maaxboard/hello/libmicrokitutils/include/wrapper/: sel4dma.h
example/maaxboard/hello/libmicrokitutils/src/: delay.c  dma.c
example/maaxboard/hello/libubootdrivers/: CMakeLists.txt
example/maaxboard/hello/libubootdrivers/include/public_api/: uboot_drivers.h
example/maaxboard/hello/libubootdrivers/include/wrapper/: maaxboard.dtb  sel4_io_map.h  sel4_timer.h  uboot_helper.h  uboot_print.h  uboot_wrapper.h
example/maaxboard/hello/libubootdrivers/src/timer/: timer_imx8mq.c
example/maaxboard/hello/libubootdrivers/src/wrapper/: sel4_delay.c  sel4_dma.c  sel4_io_map.c  uboot_drivers.c  uboot_wrapper.c
example/maaxboard/hello/libubootdrivers/uboot_stub/common/: console.c
example/maaxboard/hello/libubootdrivers/uboot_stub/include/: errno.h
example/maaxboard/hello/libubootdrivers/uboot_stub/include/linux/: dma-mapping.h
example/maaxboard/hello/libutils/: CMakeLists.txt
example/maaxboard/hello/libutils/include/utils/: arith.h
example/maaxboard/hello/libutils/src/: list.c
example/maaxboard/hello/printf/: CMakeLists.txt
example/maaxboard/hello_libc/: Makefile  hello.c  hello2.c
example/maaxboard/keyboard_logging/: Makefile  keyboard_logging.system
example/maaxboard/keyboard_logging/include/netbsd_include/sys/: fd_set.h  kernel.h  select.h  types.h
example/maaxboard/keyboard_logging/src/: kbd_logger.c  simulated_kbd.c
example/maaxboard/uboot-driver-example/: CMakeLists.txt  maaxboard.dtb  uboot-driver-example.c  uboot-driver-example.system
example/maaxboard/uboot-driver-example/libmicrokitutils/: CMakeLists.txt
example/maaxboard/uboot-driver-example/libmicrokitutils/include/dma/: dma.h
example/maaxboard/uboot-driver-example/libmicrokitutils/include/wrapper/: wrapper.h
example/maaxboard/uboot-driver-example/libmicrokitutils/src/: dma.c
example/maaxboard/uboot-driver-example/libubootdrivers/include/public_api/: uboot_drivers.h
example/maaxboard/uboot-driver-example/libubootdrivers/include/wrapper/: sel4_dma.h  sel4_timer.h  uboot_helper.h  uboot_wrapper.h
example/maaxboard/uboot-driver-example/libubootdrivers/src/timer/: timer_imx8mq.c
example/maaxboard/uboot-driver-example/libubootdrivers/src/wrapper/: sel4_delay.c  sel4_dma.c  uboot_wrapper.c
example/maaxboard/uboot-driver-example/libubootdrivers/uboot_stub/include/linux/: dma-mapping.h
example/maaxboard/uboot-driver-example/libutils/include/utils/: util.h
example/maaxboard/xhci_stub/: Makefile
example/maaxboard/xhci_stub/include/netbsd_include/dev/wscons/: wseventvar.h  wskbdvar.h
example/maaxboard/xhci_stub/include/netbsd_include/sys/: atomic.h  device.h  ioccom.h  selinfo.h  signalvar.h  wskbd.h
example/maaxboard/xhci_stub/src/: uhidev.c  ukbd.c  usb.c  wskbd.c
example/tqma8xqp1gb/ethernet/: env.sh
example/zcu102/cleancopy/: Makefile  hello.c  hello.system
example/zcu102/hello/: consumer.c  server.c
example/zcu102/hello_libc/: Makefile  hello.c  hello.system
libmicrokit/src/: crt0.s  main.c
loader/src/: loader.c
monitor/src/: main.c
